VDR Plugin 'dummydevice' Revision History
-----------------------------------------

2004-10-08: Version 0.0.1

- Initial revision.

2006-04-30: Version 1.0.0

 - Makefile updated for VDR 1.4.0. No changes in plugin.

2006-06-02: Version 1.0.1

 - Audio data handling updated for VDR 1.4.0 (reported by Ville Aakko)

2007-03-11: Version 1.0.2

- Homepage changed

2011-10-18: Version 1.0.3:

- Added dummy OSD (Thanks to L. Hanisch)
